--- a/etc/grafana/grafana.ini
+++ b/etc/grafana/grafana.ini
@@ -92,7 +92,7 @@ http_addr = 127.0.0.1
 # No ip addresses are being tracked, only simple counters to track
 # running instances, dashboard and error counts. It is very helpful to us.
 # Change this option to false to disable reporting.
-;reporting_enabled = true
+reporting_enabled = false
 
 # Google Analytics universal tracking code, only enabled if you specify an id here
 ;google_analytics_ua_id =
@@ -114,15 +114,15 @@ http_addr = 127.0.0.1
 ;cookie_remember_name = grafana_remember
 
 # disable gravatar profile images
-;disable_gravatar = false
+disable_gravatar = true
 
 #################################### Users ####################################
 [users]
 # disable user signup / registration
-;allow_sign_up = true
+allow_sign_up = false
 
 # Allow non admin users to create organizations
-;allow_org_create = true
+allow_org_create = false
 
 # Set to true to automatically assign new users to the default organization (id 1)
 ;auto_assign_org = true
@@ -239,8 +239,5 @@ http_addr = 127.0.0.1
 
 ;#################################### Dashboard JSON files ##########################
 [dashboards.json]
-;enabled = false
-;path = /var/lib/grafana/dashboards
-
-
-
+enabled = true
+path = /var/lib/grafana/dashboards
