--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -1045,13 +1045,13 @@ LoadPlugin write_graphite
     </Data>
 ###
 ###
-#	<Host "esx__vmvisor.vmware.com">
+#	<Host "esx__vmvisor_vmware_com">
 #		Address "192.168.1.10"
 #		Version 2
 #		Community "public"
 #		Collect "ifmib_if_octets64" "ifmib_if_packets64"
 #	</Host>
-#	<Host "zfs__filer.omnios.com">
+#	<Host "zfs__filer_omnios_com">
 #		Address "192.168.2.20"
 #		Version 1
 #		Community "public"
