--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -31,6 +31,13 @@
 
 <VirtualHost *:80>
 
+	ProxyPass /admin/ !
+        Alias /admin/   /var/www/admin/
+        <Directory /var/www/admin/>
+                Order allow,deny
+                Allow from all
+        </Directory>
+
 	SetEnv force-proxy-request-1.0 1
 	SetEnv proxy-nokeepalive 1
 	ProxyPass / http://127.0.0.1:3000/
