--- a/etc/carbon/storage-schemas.conf
+++ b/etc/carbon/storage-schemas.conf
@@ -19,7 +19,7 @@ pattern = ^carbon\.
 retentions = 60:90d
 
 [vsan]
-pattern = .*\.vsan\.(client|compmgr|owner).*
+pattern = .*\.vsan\.(client|compmgr|owner|lsom).*
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d
 
 [anything_else]
