--- a/etc/carbon/storage-schemas.conf
+++ b/etc/carbon/storage-schemas.conf
@@ -24,4 +24,4 @@ retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d
 
 [anything_else]
 pattern = .*
-retentions = 5m:3h,10m:12h,20m:48h,80m:7d,160m:30d,320m:1y,640m:5y
+retentions = 5m:3h,10m:12h,20m:48h,80m:7d,240m:30d,720m:90d,2400m:1y,4800m:2y,12000m:5y
