--- a/etc/grafana/grafana.ini
+++ b/etc/grafana/grafana.ini
@@ -3,7 +3,11 @@
 # Everything has defaults so you only need to uncomment things you want to
 # change
 
+# possible values : production, development
 ; app_mode = production
+
+# instance name, defaults to HOSTNAME environment variable value or hostname if HOSTNAME var is empty
+; instance_name = ${HOSTNAME}
 
 #################################### Paths ####################################
 [paths]
@@ -14,7 +18,12 @@
 # Directory where grafana can store logs
 #
 ;logs = /var/log/grafana
+#
+# Directory where grafana will automatically scan and look for plugins
+#
+;plugins = /var/lib/grafana/plugins
 
+#
 #################################### Server ####################################
 [server]
 # Protocol (http or https)
@@ -66,7 +75,7 @@ http_addr = 127.0.0.1
 
 #################################### Session ####################################
 [session]
-# Either "memory", "file", "redis", "mysql", "postgresql", default is "file"
+# Either "memory", "file", "redis", "mysql", "postgres", default is "file"
 ;provider = file
 
 # Provider config options
@@ -94,6 +103,13 @@ http_addr = 127.0.0.1
 # Change this option to false to disable reporting.
 reporting_enabled = false
 
+# Set to false to disable all checks to https://grafana.net
+# for new vesions (grafana itself and plugins), check is used
+# in some UI views to notify that grafana or plugin update exists
+# This option does not cause any auto updates, nor send any information
+# only a GET request to http://grafana.net to get latest versions
+check_for_updates = false
+
 # Google Analytics universal tracking code, only enabled if you specify an id here
 ;google_analytics_ua_id =
 
@@ -114,7 +130,16 @@ reporting_enabled = false
 ;cookie_remember_name = grafana_remember
 
 # disable gravatar profile images
-disable_gravatar = true
+disable_gravatar = false
+
+# data source proxy whitelist (ip_or_domain:port separated by spaces)
+;data_source_proxy_whitelist =
+
+[snapshots]
+# snapshot sharing options
+;external_enabled = true
+;external_snapshot_url = https://snapshots-origin.raintank.io
+;external_snapshot_name = Publish to snapshot.raintank.io
 
 #################################### Users ####################################
 [users]
@@ -129,6 +154,12 @@ allow_org_create = false
 
 # Default role new users will be automatically assigned (if disabled above is set to true)
 ;auto_assign_org_role = Viewer
+
+# Background text for the user field on the login page
+;login_hint = email or username
+
+# Default UI theme ("dark" or "light")
+default_theme = light
 
 #################################### Anonymous Auth ##########################
 [auth.anonymous]
@@ -152,7 +183,6 @@ allow_org_create = false
 ;token_url = https://github.com/login/oauth/access_token
 ;api_url = https://api.github.com/user
 ;team_ids =
-;allowed_domains =
 ;allowed_organizations =
 
 #################################### Google Auth ##########################
@@ -199,23 +229,27 @@ allow_org_create = false
 
 #################################### Logging ##########################
 [log]
-# Either "console", "file", default is "console"
-# Use comma to separate multiple modes, e.g. "console, file"
+# Either "console", "file", "syslog". Default is console and  file
+# Use space to separate multiple modes, e.g. "console file"
 ;mode = console, file
 
-# Buffer length of channel, keep it as it is if you don't know what it is.
-;buffer_len = 10000
-
-# Either "Trace", "Debug", "Info", "Warn", "Error", "Critical", default is "Trace"
-;level = Info
+# Either "trace", "debug", "info", "warn", "error", "critical", default is "info"
+;level = info
 
 # For "console" mode only
 [log.console]
 ;level =
 
+# log line format, valid options are text, console and json
+;format = console
+
 # For "file" mode only
 [log.file]
 ;level =
+
+# log line format, valid options are text, console and json
+;format = text
+
 # This enables automated log rotate(switch of following options), default is true
 ;log_rotate = true
 
@@ -223,7 +257,7 @@ allow_org_create = false
 ;max_lines = 1000000
 
 # Max size shift of single file, default is 28 means 1 << 28, 256MB
-;max_lines_shift = 28
+;max_size_shift = 28
 
 # Segment log daily, default is true
 ;daily_rotate = true
@@ -231,7 +265,24 @@ allow_org_create = false
 # Expired days of log file(delete after max days), default is 7
 ;max_days = 7
 
-#################################### AMPQ Event Publisher ##########################
+[log.syslog]
+;level =
+
+# log line format, valid options are text, console and json
+;format = text
+
+# Syslog network type and address. This can be udp, tcp, or unix. If left blank, the default unix endpoints will be used.
+;network =
+;address =
+
+# Syslog facility. user, daemon and local0 through local7 are valid.
+;facility =
+
+# Syslog tag. By default, the process' argv[0] is used.
+;tag =
+
+
+#################################### AMQP Event Publisher ##########################
 [event_publisher]
 ;enabled = false
 ;rabbitmq_url = amqp://localhost/
@@ -241,3 +292,22 @@ allow_org_create = false
 [dashboards.json]
 enabled = true
 path = /var/lib/grafana/dashboards
+
+#################################### Internal Grafana Metrics ##########################
+# Metrics available at HTTP API Url /api/metrics
+[metrics]
+# Disable / Enable internal metrics
+;enabled           = true
+
+# Publish interval
+;interval_seconds  = 10
+
+# Send internal metrics to Graphite
+; [metrics.graphite]
+; address = localhost:2003
+; prefix = prod.grafana.%(instance_name)s.
+
+#################################### Internal Grafana Metrics ##########################
+# Url used to to import dashboards directly from Grafana.net
+[grafana_net]
+url = https://grafana.net
