--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -371,7 +371,7 @@ LoadPlugin write_graphite
 #</Plugin>
 
 <Plugin df>
-	Device "/dev/sda1"
+	Device "/dev/dm-0"
 #	Device "192.168.0.2:/mnt/nfs"
 	MountPoint "/"
 	FSType "ext4"
