--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -51,19 +51,19 @@ Interval 60
 # accessed.                                                                  #
 ##############################################################################
 
-LoadPlugin logfile
-LoadPlugin syslog
+#LoadPlugin logfile
+#LoadPlugin syslog
 
-<Plugin logfile>
-	LogLevel "debug"
-	File "/tmp/collectd.log"
-	Timestamp true
-  PrintSeverity false
-</Plugin>
+#<Plugin logfile>
+#	LogLevel "debug"
+#	File "/tmp/collectd.log"
+#	Timestamp true
+#  PrintSeverity false
+#</Plugin>
 
-<Plugin syslog>
-	LogLevel info
-</Plugin>
+#<Plugin syslog>
+#	LogLevel info
+#</Plugin>
 
 ##############################################################################
 # LoadPlugin section                                                         #
