--- a/etc/carbon/storage-schemas.conf
+++ b/etc/carbon/storage-schemas.conf
@@ -23,7 +23,7 @@ pattern = ^collectd\.sexigraf\.*
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,3840m:1y
 
 [vsan]
-pattern = .*\.vsan\.(client|compmgr|owner|lsom|dom).*
+pattern = .*\.vsan\.*
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,960m:180d
 
 [anything_else]
