--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -49,3 +49,29 @@
 	ServerSignature Off
 
 </VirtualHost>
+
+<VirtualHost *:443>
+
+        SSLEngine on
+        SSLCertificateFile /etc/apache2/ssl/sexigraf.crt
+        SSLCertificateKeyFile /etc/apache2/ssl/sexigraf.key
+
+        ProxyPass /admin/ !
+        Alias /admin/   /var/www/admin/
+        <Directory /var/www/admin/>
+                Order allow,deny
+                Allow from all
+        </Directory>
+
+        SetEnv force-proxy-request-1.0 1
+        SetEnv proxy-nokeepalive 1
+
+        ProxyPass / http://127.0.0.1:3000/
+        ProxyPassReverse / http://127.0.0.1:3000/
+
+        ErrorLog /var/log/apache2/error.log
+        LogLevel warn
+        CustomLog /var/log/apache2/access.log combined
+        ServerSignature Off
+
+</VirtualHost>
