remove snmp plugin config

--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -144,7 +144,7 @@ LoadPlugin memory
 #LoadPlugin rrdtool
 #LoadPlugin sensors
 #LoadPlugin serial
-LoadPlugin snmp
+#LoadPlugin snmp
 #LoadPlugin statsd
 #LoadPlugin swap
 #LoadPlugin table
@@ -871,7 +871,7 @@ LoadPlugin write_graphite
 
 # See /usr/share/doc/collectd/examples/snmp-data.conf.gz for a
 # comprehensive sample configuration.
-<Plugin snmp>
+# <Plugin snmp>
 #	<Data "powerplus_voltge_input">
 #		Type "voltage"
 #		Table false
@@ -889,18 +889,18 @@ LoadPlugin write_graphite
 ########
 #IF-MIB#
 ########
-    <Data "ifmib_if_octets64">
-        Type "if_octets"
-        Table true
-        Instance "IF-MIB::ifName"
-        Values "IF-MIB::ifHCInOctets" "IF-MIB::ifHCOutOctets"
-    </Data>
-    <Data "ifmib_if_packets64">
-        Type "if_packets"
-        Table true
-        Instance "IF-MIB::ifName"
-        Values "IF-MIB::ifHCInUcastPkts" "IF-MIB::ifHCOutUcastPkts"
-    </Data>
+    # <Data "ifmib_if_octets64">
+    #     Type "if_octets"
+    #     Table true
+    #     Instance "IF-MIB::ifName"
+    #     Values "IF-MIB::ifHCInOctets" "IF-MIB::ifHCOutOctets"
+    # </Data>
+    # <Data "ifmib_if_packets64">
+    #     Type "if_packets"
+    #     Table true
+    #     Instance "IF-MIB::ifName"
+    #     Values "IF-MIB::ifHCInUcastPkts" "IF-MIB::ifHCOutUcastPkts"
+    # </Data>
 #    <Data "ifmib_if_errors64">
 #      Type "if_errors"
 #      Table true
@@ -908,156 +908,6 @@ LoadPlugin write_graphite
 #      Values "IF-MIB::ifHCInErrors" "IF-MIB::ifHCOutErrors"
 #    </Data>
 #####
-#ZFS#
-#####
-    <Data "ZFS_zpool_DataUsage">
-      Type "ZfsZpoolDataUsage"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.88.4.1.2.15.122.112.111.111.108.95.100.97.116.97.95.117.115.101.100"
-    </Data>
-    <Data "ZFS_zpool_SnapshotUsage">
-      Type "ZfsZpoolSnapshotUsage"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.115.110.97.112"
-    </Data>
-    <Data "ZFS_zpool_Used">
-      Type "ZfsZpoolUsed"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.117.115.101.100"
-    </Data>
-    <Data "ZFS_zpool_Available">
-      Type "ZfsZpoolAvailable"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.88.4.1.2.15.122.112.111.111.108.95.97.118.97.105.108.97.98.108.101"
-    </Data>
-    <Data "ZFS_zpool_Capacity">
-      Type "ZfsZpoolCapacity"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.88.4.1.2.14.122.112.111.111.108.95.99.97.112.97.99.105.116.121"
-    </Data>
-    <Data "ZFS_ARC_Hits">
-      Type "ZfsArcHits"
-      Table false
-      Values ".1.3.6.1.4.1.2021.89.3.1.1.8.97.114.99.95.104.105.116.115"
-    </Data>
-    <Data "ZFS_ARC_Misses">
-      Type "ZfsArcMisses"
-      Table false
-      Values ".1.3.6.1.4.1.2021.89.3.1.1.10.97.114.99.95.109.105.115.115.101.115"
-    </Data>
-    <Data "ZFS_ARC_C_Max">
-      Type "ZfsArcCMax"
-      Table false
-      Values ".1.3.6.1.4.1.2021.85.3.1.2.14.97.114.99.95.109.101.116.97.95.99.95.109.97.120"
-    </Data>
-    <Data "ZFS_ARC_Meta_Limit">
-      Type "ZfsArcMetaLimit"
-      Table false
-      Values ".1.3.6.1.4.1.2021.85.4.1.2.14.97.114.99.95.109.101.116.97.95.108.105.109.105.116.1"
-    </Data>
-    <Data "ZFS_ARC_Meta_Max">
-      Type "ZfsArcMetaMax"
-      Table false
-      Values ".1.3.6.1.4.1.2021.85.3.1.2.12.97.114.99.95.109.101.116.97.95.109.97.120"
-    </Data>
-    <Data "ZFS_ARC_Meta_Used">
-      Type "ZfsArcMetaUsed"
-      Table false
-      Values ".1.3.6.1.4.1.2021.85.3.1.2.13.97.114.99.95.109.101.116.97.95.117.115.101.100"
-    </Data>
-    <Data "ZFS_ARC_Size">
-      Type "ZfsArcSize"
-      Table false
-      Values ".1.3.6.1.4.1.2021.85.4.1.2.8.97.114.99.95.115.105.122.101.1"
-    </Data>
-    <Data "ZFS_VFS_IO_Reads">
-      Type "ZfsVfsIoReads"
-      Table false
-      Values ".1.3.6.1.4.1.2021.90.3.1.2.18.118.111.112.115.116.97.116.115.95.122.102.115.95.110.114.101.97.100"
-    </Data>
-    <Data "ZFS_VFS_IO_Writes">
-      Type "ZfsVfsIoWrites"
-      Table false
-      Values ".1.3.6.1.4.1.2021.90.3.1.2.19.118.111.112.115.116.97.116.115.95.122.102.115.95.110.119.114.105.116.101"
-    </Data>
-    <Data "ZFS_VFS_Bps_Read">
-      Type "ZfsVfsBpsRead"
-      Table false
-      Values ".1.3.6.1.4.1.2021.90.3.1.2.23.118.111.112.115.116.97.116.115.95.122.102.115.95.114.101.97.100.95.98.121.116.101.115"
-    </Data>
-    <Data "ZFS_VFS_Bps_Write">
-      Type "ZfsVfsBpsWrite"
-      Table false
-      Values ".1.3.6.1.4.1.2021.90.3.1.2.24.118.111.112.115.116.97.116.115.95.122.102.115.95.119.114.105.116.101.95.98.121.116.101.115"
-    </Data>
-    <Data "ZFS_Zvol_IO_Reads">
-      Type "ZfsZvolIoReads"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.83.4.1.2.9.108.117.110.95.97.108.105.97.115"
-      Values ".1.3.6.1.4.1.2021.83.4.1.2.9.108.117.110.95.114.101.97.100.115"
-    </Data>
-    <Data "ZFS_Zvol_IO_Writes">
-      Type "ZfsZvolIoWrites"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.83.4.1.2.9.108.117.110.95.97.108.105.97.115"
-      Values ".1.3.6.1.4.1.2021.83.4.1.2.10.108.117.110.95.119.114.105.116.101.115"
-    </Data>
-    <Data "ZFS_Zvol_Bps_Read">
-      Type "ZfsZvolBpsRead"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.82.4.1.2.9.108.117.110.95.97.108.105.97.115"
-      Values ".1.3.6.1.4.1.2021.82.4.1.2.9.108.117.110.95.110.114.101.97.100"
-    </Data>
-    <Data "ZFS_Zvol_Bps_Write">
-      Type "ZfsZvolBpsWrite"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.82.4.1.2.9.108.117.110.95.97.108.105.97.115"
-      Values ".1.3.6.1.4.1.2021.82.4.1.2.12.108.117.110.95.110.119.114.105.116.116.101.110"
-    </Data>
-    <Data "ZFS_zvol_DataUsage">
-      Type "ZfsZvolDataUsage"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.86.4.1.2.9.122.118.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.86.4.1.2.14.122.118.111.108.95.100.97.116.97.95.117.115.101.100"
-    </Data>
-    <Data "ZFS_zvol_SnapshotUsage">
-      Type "ZfsZvolSnapshotUsage"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.86.4.1.2.9.122.118.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.86.4.1.2.9.122.118.111.108.95.115.110.97.112"
-    </Data>
-    <Data "ZFS_zvol_Size">
-      Type "ZfsZvolSize"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.86.4.1.2.9.122.118.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.86.4.1.2.9.122.118.111.108.95.115.105.122.101"
-    </Data>
-    <Data "ZFS_zpool_Busy">
-      Type "ZfsZpoolBusy"
-      Table true
-      Instance ".1.3.6.1.4.1.2021.88.4.1.2.10.122.112.111.111.108.95.110.97.109.101"
-      Values ".1.3.6.1.4.1.2021.91.4.1.2.10.122.112.111.111.108.95.98.117.115.121"
-    </Data>
-###
-###
-#	<Host "esx__vmvisor_vmware_com">
-#		Address "192.168.1.10"
-#		Version 2
-#		Community "public"
-#		Collect "ifmib_if_octets64" "ifmib_if_packets64"
-#	</Host>
-#	<Host "zfs__filer_omnios_com">
-#		Address "192.168.2.20"
-#		Version 1
-#		Community "public"
-#		Collect "ZFS_zpool_DataUsage" "ZFS_zpool_SnapshotUsage" "ZFS_zpool_Used" "ZFS_zpool_Available" "ZFS_zpool_Capacity" "ZFS_ARC_Hits" "ZFS_ARC_Misses" "ZFS_ARC_C_Max" "ZFS_ARC_Meta_Limit" "ZFS_ARC_Meta_Max" "ZFS_ARC_Meta_Used" "ZFS_ARC_Size" "ZFS_VFS_IO_Reads" "ZFS_VFS_IO_Writes" "ZFS_VFS_Bps_Read" "ZFS_VFS_Bps_Write" "ZFS_Zvol_IO_Reads" "ZFS_Zvol_IO_Writes" "ZFS_Zvol_Bps_Read" "ZFS_Zvol_Bps_Write" "ZFS_zvol_DataUsage" "ZFS_zvol_SnapshotUsage" "ZFS_zvol_Size" "ZFS_zpool_Busy"
-#	</Host>
-###
 #	<Host "some.server.mydomain.org">
 #		Address "192.168.0.42"
 #		Version 2
@@ -1071,7 +921,7 @@ LoadPlugin write_graphite
 #		Collect "powerplus_voltge_input"
 #		Interval 300
 #	</Host>
-</Plugin>
+# </Plugin>
 
 #<Plugin statsd>
 #	Host "::"
@@ -1226,7 +1076,7 @@ LoadPlugin write_graphite
 #</Plugin>
 
 <Plugin write_graphite>
-	<Node "example">
+	<Node "sexigraf">
 		Host "localhost"
 		Port "2003"
 		Protocol "tcp"
