graphite install from source

--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -1,31 +1,74 @@
+<IfModule !wsgi_module.c>
+    LoadModule wsgi_module modules/mod_wsgi.so
+</IfModule>
+
+WSGISocketPrefix run/wsgi
+
 <VirtualHost *:8080>
 
-	WSGIDaemonProcess _graphite processes=5 threads=5 display-name='%{GROUP}' inactivity-timeout=120 user=_graphite group=_graphite
-	WSGIProcessGroup _graphite
-	WSGIImportScript /usr/share/graphite-web/graphite.wsgi process-group=_graphite application-group=%{GLOBAL}
-	WSGIScriptAlias / /usr/share/graphite-web/graphite.wsgi
+        # ServerName graphite
+        DocumentRoot "/opt/graphite/webapp"
+        ErrorLog /opt/graphite/storage/log/webapp/error.log
+        CustomLog /opt/graphite/storage/log/webapp/access.log common
 
-	Alias /content/ /usr/share/graphite-web/static/
-	<Location "/content/">
-		SetHandler None
-	</Location>
+        # I've found that an equal number of processes & threads tends
+        # to show the best performance for Graphite (ymmv).
+        WSGIDaemonProcess graphite processes=5 threads=5 display-name='%{GROUP}' inactivity-timeout=120
+        WSGIProcessGroup graphite
+        WSGIApplicationGroup %{GLOBAL}
+        WSGIImportScript /opt/graphite/conf/graphite.wsgi process-group=graphite application-group=%{GLOBAL}
 
-        <Location "/">
-                Order deny,allow
-                Deny from all
-                Allow from 127.0.0.0/255.0.0.0 ::1/128
-        </Location>
+        # XXX You will need to create this file! There is a graphite.wsgi.example
+        # file in this directory that you can safely use, just copy it to graphite.wgsi
+        WSGIScriptAlias / /opt/graphite/conf/graphite.wsgi
+
+        # <Location "/">
+        #         Order deny,allow
+        #         Deny from all
+        #         Allow from 127.0.0.0/255.0.0.0 ::1/128
+        # </Location>
+
+        # XXX To serve static files, either:
+        # * Install the whitenoise Python package (pip install whitenoise)
+        # * Collect static files in a directory by running:
+        #     django-admin.py collectstatic --noinput --settings=graphite.settings
+        #   And set an alias to serve static files with Apache:
+        Alias /static/ /opt/graphite/static/
+
+        <Directory /opt/graphite/static/>
+                Require all granted
+        </Directory>
+
+        ########################
+        # URL-prefixed install #
+        ########################
+        # If using URL_PREFIX in local_settings for URL-prefixed install (that is not located at "/"))
+        # your WSGIScriptAlias line should look like the following (e.g. URL_PREFX="/graphite"
+
+        # WSGIScriptAlias /graphite /srv/graphite-web/conf/graphite.wsgi/graphite
+        # Alias /graphite/static /opt/graphite/webapp/content
+        #  <Location "/graphite/static/">
+        #        SetHandler None
+        # </Location>
 
 
-	ErrorLog ${APACHE_LOG_DIR}/graphite-web_error.log
+        # XXX In order for the django admin site media to work you
+        # must change @DJANGO_ROOT@ to be the path to your django
+        # installation, which is probably something like:
+        # /usr/lib/python2.6/site-packages/django
+        Alias /media/ "@DJANGO_ROOT@/contrib/admin/media/"
 
-	# Possible values include: debug, info, notice, warn, error, crit,
-	# alert, emerg.
-	LogLevel warn
-
-	CustomLog ${APACHE_LOG_DIR}/graphite-web_access.log combined
-
-	ServerSignature Off
+        # The graphite.wsgi file has to be accessible by apache. It won't
+        # be visible to clients because of the DocumentRoot though.
+        <Directory /opt/graphite/conf/>
+                <IfVersion < 2.4>
+                        Order deny,allow
+                        Allow from all
+                </IfVersion>
+                <IfVersion >= 2.4>
+                        Require all granted
+                </IfVersion>
+        </Directory>
 
 </VirtualHost>
 
