--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -89,7 +89,7 @@ LoadPlugin cpu
 #LoadPlugin curl_xml
 #LoadPlugin dbi
 LoadPlugin df
-#LoadPlugin disk
+LoadPlugin disk
 #LoadPlugin dns
 #LoadPlugin email
 #LoadPlugin entropy
@@ -397,11 +397,11 @@ LoadPlugin write_graphite
 #	ValuesPercentage false
 </Plugin>
 
-#<Plugin disk>
-#	Disk "hda"
-#	Disk "/sda[23]/"
-#	IgnoreSelected false
-#</Plugin>
+<Plugin disk>
+	Disk "sda"
+	# Disk "/sda[23]/"
+	IgnoreSelected false
+</Plugin>
 
 #<Plugin dns>
 #	Interface "eth0"
