--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -462,7 +462,7 @@ LoadPlugin write_graphite
 #</Plugin>
 
 <Plugin interface>
-	Interface "eth0"
+	Interface "ens160"
 	IgnoreSelected false
 </Plugin>
 
