--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -74,8 +74,8 @@ WSGISocketPrefix run/wsgi
 
 <VirtualHost *:80>
 
-	ProxyPass /admin/ !
-        Alias /admin/   /var/www/admin/
+	ProxyPass /sexiadmin/ !
+        Alias /sexiadmin/   /var/www/admin/
         <Directory /var/www/admin/>
                 Order allow,deny
                 Allow from all
@@ -99,8 +99,8 @@ WSGISocketPrefix run/wsgi
         SSLCertificateFile /etc/apache2/ssl/sexigraf.crt
         SSLCertificateKeyFile /etc/apache2/ssl/sexigraf.key
 
-        ProxyPass /admin/ !
-        Alias /admin/   /var/www/admin/
+        ProxyPass /sexiadmin/ !
+        Alias /sexiadmin/   /var/www/admin/
         <Directory /var/www/admin/>
                 Order allow,deny
                 Allow from all
