--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -99,6 +99,9 @@ WSGISocketPrefix run/wsgi
         SSLCertificateFile /etc/apache2/ssl/sexigraf.crt
         SSLCertificateKeyFile /etc/apache2/ssl/sexigraf.key
 
+        Header unset Strict-Transport-Security
+        Header always set Strict-Transport-Security "max-age=0;includeSubDomains"
+
         ProxyPass /sexiadmin/ !
         Alias /sexiadmin/   /var/www/admin/
         <Directory /var/www/admin/>
