--- a/etc/grafana/provisioning/dashboards/FreeNAS_OS.yaml
+++ b/etc/grafana/provisioning/dashboards/FreeNAS_OS.yaml
@@ -2,13 +2,14 @@ apiVersion: 1
 
 providers:
   # <string> an unique provider name
-- name: 'FreeNAS OS'
+- name: 'FreeNAS_OS'
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string, required> name of the dashboard folder. Required
+  # CRC32 of name
   folder: 'FreeNAS OS'
   # <string> folder UID. will be automatically generated if not specified
-  folderUid: ''
+  folderUid: '98a3ce3c'
   # <string, required> provider type. Required
   type: file
   # <bool> disable dashboard deletion
