--- a/etc/grafana/provisioning/dashboards/VMware_vCenter.yaml
+++ b/etc/grafana/provisioning/dashboards/VMware_vCenter.yaml
@@ -8,7 +8,8 @@ providers:
   # <string, required> name of the dashboard folder. Required
   folder: 'VMware vCenter'
   # <string> folder UID. will be automatically generated if not specified
-  folderUid: ''
+  # CRC32 of name
+  folderUid: '461fdd1d'
   # <string, required> provider type. Required
   type: file
   # <bool> disable dashboard deletion
