--- a/etc/grafana/provisioning/dashboards/Windows_OS.yaml
+++ b/etc/grafana/provisioning/dashboards/Windows_OS.yaml
@@ -2,13 +2,14 @@ apiVersion: 1
 
 providers:
   # <string> an unique provider name
-- name: 'Windows OS'
+- name: 'Windows_OS'
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string, required> name of the dashboard folder. Required
   folder: 'Windows OS'
   # <string> folder UID. will be automatically generated if not specified
-  folderUid: ''
+  # CRC32 of name
+  folderUid: 'd94278cb'
   # <string, required> provider type. Required
   type: file
   # <bool> disable dashboard deletion
