--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -83,8 +83,8 @@ WSGISocketPrefix run/wsgi
 
 	SetEnv force-proxy-request-1.0 1
 	SetEnv proxy-nokeepalive 1
+        ProxyPass /netdata/ http://127.0.0.1:19999/
 	ProxyPass / http://127.0.0.1:3000/
-	ProxyPassReverse / http://127.0.0.1:3000/
 
 	ErrorLog /var/log/apache2/error.log
 	LogLevel warn
@@ -109,8 +109,8 @@ WSGISocketPrefix run/wsgi
         SetEnv force-proxy-request-1.0 1
         SetEnv proxy-nokeepalive 1
 
+        ProxyPass /netdata/ http://127.0.0.1:19999/
         ProxyPass / http://127.0.0.1:3000/
-        ProxyPassReverse / http://127.0.0.1:3000/
 
         ErrorLog /var/log/apache2/error.log
         LogLevel warn
