--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -374,6 +374,7 @@ LoadPlugin write_graphite
 #	Device "/dev/dm-0"
 #	Device "192.168.0.2:/mnt/nfs"
 	MountPoint "/"
+	MountPoint "/zfs/wisper"
 #	FSType "ext4"
 
 	# ignore rootfs; else, the root file-system would appear twice, causing
@@ -399,6 +400,7 @@ LoadPlugin write_graphite
 
 <Plugin disk>
 	Disk "sda"
+	Disk "sdb"
 	# Disk "/sda[23]/"
 	IgnoreSelected false
 </Plugin>
@@ -462,7 +464,7 @@ LoadPlugin write_graphite
 #</Plugin>
 
 <Plugin interface>
-	Interface "ens160"
+	Interface "ens192"
 	IgnoreSelected false
 </Plugin>
 
