add pfsense support
 #202

--- a/opt/graphite/conf/storage-schemas.conf
+++ b/opt/graphite/conf/storage-schemas.conf
@@ -22,6 +22,10 @@ retentions = 60:90d
 pattern = ^collectd\.sexigraf\.*
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,3840m:1y
 
+[pfsense]
+pattern = ^pfsense\.
+retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,3840m:1y
+
 [vsan]
 pattern = ^vsan\.
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,960m:180d
