--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -22,11 +22,11 @@ WSGISocketPrefix run/wsgi
         # file in this directory that you can safely use, just copy it to graphite.wgsi
         WSGIScriptAlias / /opt/graphite/conf/graphite.wsgi
 
-        # <Location "/">
-        #         Order deny,allow
-        #         Deny from all
-        #         Allow from 127.0.0.0/255.0.0.0 ::1/128
-        # </Location>
+        <Location "/">
+                Order deny,allow
+                Deny from all
+                Allow from 127.0.0.0/255.0.0.0 ::1/128
+        </Location>
 
         # XXX To serve static files, either:
         # * Install the whitenoise Python package (pip install whitenoise)
