remove zfs support

--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -374,7 +374,7 @@ LoadPlugin write_graphite
 #	Device "/dev/dm-0"
 #	Device "192.168.0.2:/mnt/nfs"
 	MountPoint "/"
-	MountPoint "/zfs/whisper"
+	MountPoint "/mnt/wfs/whisper"
 #	FSType "ext4"
 
 	# ignore rootfs; else, the root file-system would appear twice, causing
