--- a/opt/graphite/conf/carbon.conf
+++ b/opt/graphite/conf/carbon.conf
@@ -28,7 +28,7 @@
 #   LOG_DIR        = /var/log/carbon/
 #   PID_DIR        = /var/run/
 #
-LOCAL_DATA_DIR = /zfs/whisper/
+LOCAL_DATA_DIR = /mnt/wfs/whisper/
 
 # Specify the database library used to store metric data on disk. Each database
 # may have configurable options to change the behaviour of how it writes to
