--- a/opt/graphite/conf/carbon.conf
+++ b/opt/graphite/conf/carbon.conf
@@ -44,7 +44,7 @@ DATABASE = whisper
 # Enable daily log rotation. If disabled, a new file will be opened whenever the log file path no
 # longer exists (i.e. it is removed or renamed)
 ENABLE_LOGROTATION = False
-LOG_DIR = /var/log/sexigraf/
+LOG_DIR = /var/log/sexigraf/carbon/
 
 # Specify the user to drop privileges to
 # If this is blank carbon-cache runs as the user that invokes it
@@ -360,6 +360,8 @@ LINE_RECEIVER_PORT = 2003
 PICKLE_RECEIVER_INTERFACE = 0.0.0.0
 PICKLE_RECEIVER_PORT = 2004
 PICKLE_RECEIVER_MAX_LENGTH = 1048576
+
+LOG_DIR = /var/log/sexigraf/carbon/
 
 # Carbon-relay has several options for metric routing controlled by RELAY_METHOD
 #
