--- a/etc/grafana/provisioning/dashboards/Windows_OS.yaml
+++ b/etc/grafana/provisioning/dashboards/Windows_OS.yaml
@@ -2,11 +2,11 @@ apiVersion: 1
 
 providers:
   # <string> an unique provider name
-- name: 'Windows_OS'
+- name: 'Miscellaneous'
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string, required> name of the dashboard folder. Required
-  folder: 'Windows OS'
+  folder: 'Miscellaneous'
   # <string> folder UID. will be automatically generated if not specified
   # CRC32 of name
   folderUid: 'd94278cb'
@@ -22,4 +22,4 @@ providers:
   allowUiUpdates: false
   options:
     # <string, required> path to dashboard files on disk. Required
-    path: /var/lib/grafana/dashboards/Windows
+    path: /var/lib/grafana/dashboards/Miscellaneous
