--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -1,4 +1,14 @@
 [ExEvent]
 pattern = ^vi.*\.vi\.exec\.ExEvent.*
+xFilesFactor = 0.0
 aggregationMethod = sum
-xFilesFactore = 0.0
+
+[Vmotion]
+pattern = .numVmotions
+xFilesFactor = 0.0
+aggregationMethod = sum
+
+[SVMotion]
+pattern = .numSVMotion
+xFilesFactor = 0.0
+aggregationMethod = sum
