--- a/opt/graphite/conf/storage-schemas.conf
+++ b/opt/graphite/conf/storage-schemas.conf
@@ -32,4 +32,5 @@ retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,960m:180d
 
 [anything_else]
 pattern = .*
-retentions = 5m:3h,10m:12h,20m:48h,80m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
+# retentions = 5m:48h,10m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
+retentions = 5m:48h,10m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
