--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -9,6 +9,6 @@ xFilesFactor = 0.0
 aggregationMethod = sum
 
 [SVMotion]
-pattern = .numSVMotion
+pattern = .numSVMotions
 xFilesFactor = 0.0
 aggregationMethod = sum
