--- a/etc/telegraf/telegraf.d/input.ntpq.conf
+++ b/etc/telegraf/telegraf.d/input.ntpq.conf
@@ -1,4 +1,4 @@
 # # Get standard NTP query metrics, requires ntpq executable.
- [inputs.ntpq]]
+ [[inputs.ntpq]]
 #   ## If false, set the -n ntpq flag. Can reduce metric gather time.
  dns_lookup = true
