--- a/opt/graphite/conf/storage-schemas.conf
+++ b/opt/graphite/conf/storage-schemas.conf
@@ -20,7 +20,7 @@ retentions = 60:90d
 
 [ntpq]
 pattern = ^telegraf\.ntpq\.
-retentions = 5min:7d
+retentions = 5m:7d
 
 [sexigraf]
 pattern = ^collectd\.sexigraf\.
