--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -3,6 +3,7 @@
 </IfModule>
 
 WSGISocketPrefix run/wsgi
+ExtendedStatus On
 
 <VirtualHost *:8080>
 
@@ -26,6 +27,10 @@ WSGISocketPrefix run/wsgi
                 Order deny,allow
                 Deny from all
                 Allow from 127.0.0.0/255.0.0.0 ::1/128
+        </Location>
+
+        <Location "/server-status">
+            SetHandler server-status
         </Location>
 
         # XXX To serve static files, either:
