--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -4,11 +4,11 @@ xFilesFactor = 0.0
 aggregationMethod = sum
 
 [Vmotion]
-pattern = .numVmotions
+pattern = .\.numVmotions.
 xFilesFactor = 0.0
-aggregationMethod = sum
+aggregationMethod = max
 
 [SVMotion]
-pattern = .numSVMotions
+pattern = .\.numSVMotions.
 xFilesFactor = 0.0
-aggregationMethod = sum
+aggregationMethod = max
