--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -6,9 +6,9 @@ aggregationMethod = sum
 [Vmotion]
 pattern = .\.numVmotions.
 xFilesFactor = 0.0
-aggregationMethod = max
+aggregationMethod = last
 
 [SVMotion]
 pattern = .\.numSVMotions.
 xFilesFactor = 0.0
-aggregationMethod = max
+aggregationMethod = last
