--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -86,6 +86,9 @@ ExtendedStatus On
                 Allow from all
         </Directory>
 
+        ProxyPass /favicon.ico !
+        Alias /favicon.ico /var/www/admin/images/favicon.ico
+
 	SetEnv force-proxy-request-1.0 1
 	SetEnv proxy-nokeepalive 1
         ProxyPass /netdata/ http://127.0.0.1:19999/
@@ -110,6 +113,9 @@ ExtendedStatus On
                 Order allow,deny
                 Allow from all
         </Directory>
+
+        ProxyPass /favicon.ico !
+        Alias /favicon.ico /var/www/admin/images/favicon.ico
 
         SetEnv force-proxy-request-1.0 1
         SetEnv proxy-nokeepalive 1
