--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -12,3 +12,8 @@ aggregationMethod = last
 pattern = .\.numSVMotions.
 xFilesFactor = 0.0
 aggregationMethod = last
+
+[ProductVersion]
+pattern = ^vi.*\.vi\.version\.*
+xFilesFactor = 0.0
+aggregationMethod = last
