--- a/opt/graphite/conf/storage-schemas.conf
+++ b/opt/graphite/conf/storage-schemas.conf
@@ -22,6 +22,10 @@ retentions = 60:90d
 pattern = ^collectd\.sexigraf\.
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,3840m:1y
 
+[smart]
+pattern = ^smart\.
+retentions = 60m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
+
 [pfsense]
 pattern = ^pfsense\.
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,3840m:1y
