--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -17,3 +17,23 @@ aggregationMethod = last
 pattern = ^vi.*\.vi\.version\.*
 xFilesFactor = 0.0
 aggregationMethod = last
+
+[droppedRx]
+pattern = .\.droppedRx.
+xFilesFactor = 0.0
+aggregationMethod = sum
+
+[droppedTx]
+pattern = .\.droppedTx.
+xFilesFactor = 0.0
+aggregationMethod = sum
+
+[errorsRx]
+pattern = .\.errorsRx.
+xFilesFactor = 0.0
+aggregationMethod = sum
+
+[errorsTx]
+pattern = .\.errorsTx.
+xFilesFactor = 0.0
+aggregationMethod = sum
