--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -464,7 +464,7 @@ LoadPlugin write_graphite
 #</Plugin>
 
 <Plugin interface>
-	Interface "ens192"
+	Interface "eth0"
 	IgnoreSelected false
 </Plugin>
 
