--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -30,7 +30,7 @@ ExtendedStatus On
         </Location>
 
         <Location "/server-status">
-            SetHandler server-status
+                SetHandler server-status
         </Location>
 
         # XXX To serve static files, either:
@@ -93,6 +93,12 @@ ExtendedStatus On
 	SetEnv proxy-nokeepalive 1
         ProxyPass /netdata/ http://127.0.0.1:19999/
 	ProxyPass / http://127.0.0.1:3000/
+
+
+        ## HTTPS REDIRECT
+        # RewriteEngine On
+        # RewriteCond %{HTTPS} off
+        # RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 
 	ErrorLog /var/log/apache2/error.log
 	LogLevel warn
