--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -1115,6 +1115,6 @@ LoadPlugin write_graphite
 #	Tag "foobar"
 #</Plugin>
 
-<Include "/etc/collectd/collectd.conf.d">
-	Filter "*.conf"
-</Include>
+# <Include "/etc/collectd/collectd.conf.d">
+# 	Filter "*.conf"
+# </Include>
