--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -13,6 +13,11 @@ pattern = .\.numSVMotions.
 xFilesFactor = 0.0
 aggregationMethod = last
 
+[XVMotion]
+pattern = .\.numXVMotions.
+xFilesFactor = 0.0
+aggregationMethod = last
+
 [ProductVersion]
 pattern = ^vi.*\.vi\.version\.*
 xFilesFactor = 0.0
