--- a/opt/graphite/conf/storage-schemas.conf
+++ b/opt/graphite/conf/storage-schemas.conf
@@ -30,6 +30,14 @@ retentions = 60m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
 pattern = ^pfsense\.
 retentions = 1m:1h,2m:2h,4m:3h,12m:12h,24m:2d,96m:7d,192m:30d,3840m:1y
 
+[vsan_health]
+pattern = .*\.vsan\.ObjectHealthDetail\.
+retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d,2880m:1y
+
+[vsan_sync]
+pattern = .*\.vsan\.SyncingVsanObjects\.
+retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d
+
 [vsan_smart]
 pattern = .*\.vsan\.disks\.smart\.
 retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d,2880m:1y
