--- a/opt/graphite/conf/carbon.conf
+++ b/opt/graphite/conf/carbon.conf
@@ -362,6 +362,7 @@ PICKLE_RECEIVER_PORT = 2004
 PICKLE_RECEIVER_MAX_LENGTH = 1048576
 
 LOG_DIR = /var/log/sexigraf/carbon/
+ENABLE_LOGROTATION = False
 
 # Carbon-relay has several options for metric routing controlled by RELAY_METHOD
 #
