--- a/opt/graphite/conf/storage-schemas.conf
+++ b/opt/graphite/conf/storage-schemas.conf
@@ -39,7 +39,7 @@ pattern = .*\.vsan\.SyncingVsanObjects\.
 retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d
 
 [vsan_smart]
-pattern = .*\.vsan\.disks\.smart\.
+pattern = .*\.vsan\.disk\.smart\.
 retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d,2880m:1y
 
 [vsan_spaceDetail]
