--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -110,6 +110,7 @@ ExtendedStatus On
 <VirtualHost *:443>
 
         SSLEngine on
+        ProxyPreserveHost On
         SSLCertificateFile /etc/apache2/ssl/sexigraf.crt
         SSLCertificateKeyFile /etc/apache2/ssl/sexigraf.key
 
