--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -51,15 +51,15 @@ Interval 60
 # accessed.                                                                  #
 ##############################################################################
 
-#LoadPlugin logfile
+LoadPlugin logfile
 #LoadPlugin syslog
 
-#<Plugin logfile>
-#	LogLevel "debug"
-#	File "/tmp/collectd.log"
-#	Timestamp true
-#  PrintSeverity false
-#</Plugin>
+<Plugin logfile>
+	LogLevel "info"
+	File "/var/log/collectd/collectd.log"
+	Timestamp true
+ PrintSeverity false
+</Plugin>
 
 #<Plugin syslog>
 #	LogLevel info
