--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -51,15 +51,15 @@ Interval 60
 # accessed.                                                                  #
 ##############################################################################
 
-LoadPlugin logfile
+#LoadPlugin logfile
 #LoadPlugin syslog
 
-<Plugin logfile>
-	LogLevel "info"
-	File "/var/log/collectd/collectd.log"
-	Timestamp true
- PrintSeverity false
-</Plugin>
+# <Plugin logfile>
+# 	LogLevel "info"
+# 	File "/var/log/collectd/collectd.log"
+# 	Timestamp true
+#  PrintSeverity false
+# </Plugin>
 
 #<Plugin syslog>
 #	LogLevel info
@@ -909,6 +909,12 @@ LoadPlugin write_graphite
 #      Instance "IF-MIB::ifName"
 #      Values "IF-MIB::ifHCInErrors" "IF-MIB::ifHCOutErrors"
 #    </Data>
+    # <Data "std_traffic">
+    #   Type "if_octets"
+    #   Table true
+    #   Instance "IF-MIB::ifDescr"
+    #   Values "IF-MIB::ifInOctets" "IF-MIB::ifOutOctets"
+    # </Data>
 #####
 #	<Host "some.server.mydomain.org">
 #		Address "192.168.0.42"
